--- a/components/footer.html
+++ b/components/footer.html
@@ -7,7 +7,7 @@
 <body>
     <footer>
         <div class="container-fluid">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-start">
                     <span id="textIcon">
                         <i class="bi bi-envelope-at"></i> janaina.adolfo.ds@gmail.com
