--- a/components/styles/menuStyles.css
+++ b/components/styles/menuStyles.css
@@ -1,6 +1,21 @@
 @import url("cores.css");
 @import url("fonts.css");
 
+@media (min-width: 577px) {
+    .text{
+        display: inline;
+    }
+}
+
+@media (max-width: 576px) {
+    .text{
+        display: none;
+    }
+    .icon{
+        padding-right: 0px;
+    }
+}
+
 header{
     background-color: var(--cor_Fundo);
     border-bottom: 5px ridge var(--cor_Texto);
@@ -15,6 +30,7 @@ nav{
 ul{
     display: flex;
     list-style-type: none;
+    margin: 0px;
 }
 
 li{
@@ -24,21 +40,19 @@ li{
 a{
     padding: 10px;
     text-decoration: none;
+    color: var(--cor_Texto);
 }
 
 .text{
     font-family: 'Kalam', cursive;
-    color: var(--cor_Texto);
 }
 
 .ativado{
-    padding: 5px;
     border-radius: 12px;
     border: 5px ridge var(--cor_Texto);
 }
 
 a:hover, a:active{
-    padding: 5px;
     border-radius: 12px;
     border: 5px ridge var(--cor_Titulo);
     color: var(--cor_Titulo);
@@ -46,7 +60,6 @@ a:hover, a:active{
 
 .icon{
     padding-right: 5px;
-    color: var(--cor_Texto);
 }
 
 #imgMenu{
