--- a/components/footer.html
+++ b/components/footer.html
@@ -7,25 +7,38 @@
 <body>
     <footer>
         <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-start">
-                    <span id="textIcon">
+            <div class="row align-items-center text-center">
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                    <div id="textIcon">
                         <i class="bi bi-envelope-at"></i> janaina.adolfo.ds@gmail.com
-                    </span>
+                    </div>
                 </div>
-                <div class="col-sm-12 col-md-6 col-lg-6 d-flex justify-content-end">
-                    <span id="textIcon">
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                    <div id="textIcon">
+                        <i class="bi bi-telegram"></i> +55 (53) 98436-7322
+                    </div>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                    <div id="textIcon">
+                        <i class="bi bi-whatsapp"></i> +55 (53) 98436-7322
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center">
+                    <div id="textIcon">
                         <i class="bi bi-facebook"></i>
+                    </div>
+                    <div id="textIcon">
                         <i class="bi bi-github"></i>
-
+                    </div>
+                    <div id="textIcon">
                         <i class="bi bi-linkedin"></i>
-
-                        <i class="bi bi-telegram"></i>
-
-                        <i class="bi bi-whatsapp"></i>
-                    </span>
+                    </div>
+                    <div id="textIcon">
+                        <i class="bi bi-instagram"></i>
+                    </div>
                 </div>
             </div>
+        </div>
         </div>
     </footer>
 </body>
