--- a/components/styles/indexStyles.css
+++ b/components/styles/indexStyles.css
@@ -71,7 +71,26 @@ p{
 @media (min-width: 992px) {
     
     #content .row{
-        height: 75vh;
+        height: 74vh;
     }
   
+}
+
+#CV{  
+    background-color: var(--cor_Titulo) !important;
+    color: var(--cor_Fundo);
+    border-radius: 12px;
+    border: 5px ridge var(--cor_Fundo);
+}
+#CL{
+    color: var(--cor_Texto);
+    border-radius: 12px;
+    border: 5px ridge var(--cor_Texto);
+}
+
+#CV:hover, #CL:hover {
+    background-color: var(--cor_Fundo) !important;
+    color: var(--cor_Titulo) !important;
+    border-radius: 12px;
+    border: 5px ridge var(--cor_Titulo);
 }
