--- a/components/footer.html
+++ b/components/footer.html
@@ -8,18 +8,14 @@
     <footer>
         <div class="container-fluid">
             <div class="row align-items-center text-center">
-                <div class="col-sm-4 col-md-4 col-lg-4">
+                <div class="col-sm-6 col-md-6 col-lg-6">
                     <div id="textIcon">
                         <i class="bi bi-envelope-at"></i> janaina.adolfo.ds@gmail.com
                     </div>
                 </div>
-                <div class="col-sm-4 col-md-4 col-lg-4">
+                <div class="col-sm-6 col-md-6 col-lg-6">
                     <div id="textIcon">
-                        <i class="bi bi-telegram"></i> +55 (53) 98436-7322
-                    </div>
-                </div>
-                <div class="col-sm-4 col-md-4 col-lg-4">
-                    <div id="textIcon">
+                        <i class="bi bi-telegram"></i>
                         <i class="bi bi-whatsapp"></i> +55 (53) 98436-7322
                     </div>
                 </div>
@@ -28,13 +24,13 @@
                         <i class="bi bi-facebook"></i>
                     </div>
                     <div id="textIcon">
-                        <i class="bi bi-github"></i>
+                        <i class="bi bi-instagram"></i>
                     </div>
                     <div id="textIcon">
                         <i class="bi bi-linkedin"></i>
                     </div>
                     <div id="textIcon">
-                        <i class="bi bi-instagram"></i>
+                        <i class="bi bi-github"></i>
                     </div>
                 </div>
             </div>
