--- a/components/footer.html
+++ b/components/footer.html
@@ -21,16 +21,24 @@
                 </div>
                 <div class="col-sm-12 col-md-12 col-lg-12 d-flex justify-content-center">
                     <div id="textIcon">
-                        <i class="bi bi-facebook"></i>
+                        <a href="https://www.facebook.com/Jana.Dark.Adolfo/" target="_blank">
+                            <i class="bi bi-facebook"></i>
+                        </a>
                     </div>
                     <div id="textIcon">
-                        <i class="bi bi-instagram"></i>
+                        <a href="https://www.instagram.com/jana_adolfo/" target="_blank">
+                            <i class="bi bi-instagram"></i>
+                        </a>
                     </div>
                     <div id="textIcon">
-                        <i class="bi bi-linkedin"></i>
+                        <a href="http://www.linkedin.com/in/Jana-da-Silva" target="_blank">
+                            <i class="bi bi-linkedin"></i>
+                        </a>
                     </div>
                     <div id="textIcon">
-                        <i class="bi bi-github"></i>
+                        <a href="https://github.com/Jana-SI" target="_blank">
+                            <i class="bi bi-github"></i>
+                        </a>
                     </div>
                 </div>
             </div>
