--- a/components/styles/indexStyles.css
+++ b/components/styles/indexStyles.css
@@ -93,16 +93,29 @@ p{
     border: 5px ridge var(--cor_Fundo);
 }
 
-#CV:hover, #CL:hover {
+#CV:hover{
     background-color: var(--cor_Fundo) !important;
     color: var(--cor_Titulo) !important;
     border-radius: 12px;
     border: 5px ridge var(--cor_Titulo);
 }
 
-#CL:hover {
+#CL:hover{
     background-color: var(--cor_Fundo) !important;
     color: var(--cor_Texto) !important;
     border-radius: 12px;
     border: 5px ridge var(--cor_Texto);
+}
+
+#CV a, #CL a{
+    text-decoration: none;
+    color: var(--cor_Fundo);
+}
+
+#CV:hover a{
+    color: var(--cor_Titulo) !important;
+}
+
+#CL:hover a{
+    color: var(--cor_Texto) !important;
 }
