--- a/components/styles/projetosStyles.css
+++ b/components/styles/projetosStyles.css
@@ -18,16 +18,11 @@
 
 .card-title{
     text-align: center;
+    border-bottom: 5px ridge var(--cor_Fundo);
 }
 
 #div1, #div2, #div3, #div4, #div5, #div6{
     text-align: center;
     font-size:48px;
-    animation: girar 4s linear infinite;
-}
-
-@keyframes girar {
-    100% {
-        transform: rotate(360deg);
-    }
+    
 }
