--- a/components/styles/habilidadesStyles.css
+++ b/components/styles/habilidadesStyles.css
@@ -13,7 +13,7 @@
 #joomla,
 #wordpress,
 #git,
-#github{
+#github, #flask, #python{
     margin: 10px;
     padding: 10px;
     background-color: var(--cor_Texto) !important;
@@ -34,7 +34,7 @@
 #joomla:hover,
 #wordpress:hover,
 #git:hover,
-#github:hover
+#github:hover, #flask:hover, #python:hover
 {
     background-color: var(--cor_Titulo) !important;
     color: var(--cor_Fundo) !important;
@@ -132,5 +132,19 @@
     width: 32px;
     height: 32px;
     background-image: url("../icones/github-roxo.png");
+    background-repeat: no-repeat;
+}
+
+#iconFlask{
+    width: 32px;
+    height: 32px;
+    background-image: url("../icones/flask-roxo.png");
+    background-repeat: no-repeat;
+}
+
+#iconPython{
+    width: 32px;
+    height: 32px;
+    background-image: url("../icones/python-roxo.png");
     background-repeat: no-repeat;
 }
