--- a/components/styles/indexStyles.css
+++ b/components/styles/indexStyles.css
@@ -3,12 +3,13 @@
 
 html, body{
     margin: 0;
-    background-color: var(--cor_Fundo);
+    background-image: url('../img/fundo.jpg');
 }
+
 
 @media (min-width: 768px) {
     
-    #content #rowP{
+    #content{
         height: 74vh;
     }
   
@@ -18,11 +19,13 @@ h1{
     padding: 20px;
     font-family: 'Lemonada', cursive;
     color: var(--cor_Titulo);
+    -webkit-text-stroke-width: 2px;
+    -webkit-text-stroke-color: var(--cor_Fundo);
 }
 
 p{
     font-family: 'Kalam', cursive;
-    color: var(--cor_Texto);
+    color: var(--cor_Fundo);
 }
 
 #imgHome{
@@ -118,4 +121,32 @@ p{
 #CV:hover a, #CL:hover a{
     text-decoration: none;
     color: var(--cor_Fundo) !important;
+}
+
+#textIcon{
+    margin: 20px 10px;
+    text-align: center;
+}
+
+#textIcon i{
+    display: inline-block;
+    position: relative;
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    padding: 0px;
+    text-decoration: none;
+    text-align: center;
+    font-size: 25px;
+    font-weight: normal;
+    line-height: 2em;
+    border-radius: 25px;
+    -moz-border-radius:25px;
+    -webkit-border-radius:25px;
+    background-color: var(--cor_Fundo);;
+    color: var(--cor_Titulo);
+}
+
+#textIcon i:hover{
+    color: var(--cor_Texto);
 }
