--- a/components/styles/projetosStyles.css
+++ b/components/styles/projetosStyles.css
@@ -1,33 +1,68 @@
 @import url("cores.css");
 @import url("fonts.css");
 
-#cards .card{
+#cards{
+    margin: 16px;
+    padding: 16px;
+}
+
+#cards .card {
     background-color: var(--cor_Titulo);
     color: var(--cor_Fundo);
     border-radius: 12px;
     border: 5px ridge var(--cor_Fundo);
 }
 
-.card-title{
+#cards .card-title {
     text-align: center;
     border-bottom: 5px ridge var(--cor_Fundo);
 }
 
-#cards ul{
+#cards .card-footer{
+    background-color: var(--cor_Texto);
+    color: var(--cor_Fundo);
+    border-top: 5px ridge var(--cor_Fundo);
+}
+
+#cards .card-footer a{
+    color: var(--cor_Fundo);
+}
+
+#cards p {
+    font-size: 16px;
+}
+
+#cards h5{
+    font-weight: bold;
+}
+
+#cards ul {
     margin-bottom: 16px;
 }
 
-#cards li{
+#cards li {
     background-color: var(--cor_Texto);
     color: var(--cor_Fundo);
 }
 
-#lupa{
+#lupa {
     margin: 16px;
-    font-size:50px;  
+    font-size: 50px;
 }
 
-#cards #img_width_height{
+#cards #img_width_height {
     width: 20px;
     height: 20px;
+}
+
+#cards button{
+    background-color: var(--cor_Titulo);
+    color: var(--cor_Fundo);
+    border-radius: 12px;
+    border: 5px ridge var(--cor_Fundo);
+    font-weight: bold;
+}
+
+#cards button:hover{
+    background-color: var(--cor_Texto);
 }
