--- a/components/styles/indexStyles.css
+++ b/components/styles/indexStyles.css
@@ -7,26 +7,25 @@ html, body{
     padding: 0;
     margin: 0;
     background-image: url('../img/fundo.jpg');
+    background-size: cover; /* Isso faz a imagem cobrir todo o fundo */
+    background-position: center center; /* Isso centraliza a imagem horizontal e verticalmente */
+    background-repeat: no-repeat; /* Isso evita que a imagem se repita */
 }
 
 
 @media (min-width: 768px) {
     
     #content{
-        height: 85vh;
+        min-height: 85vh;
     }
   
 }
 
-@media (max-width: 340px) {
-    h1, p, #CV a, #CL a{
-        font-size: 8vw !important;
-    }
-}
-
 h1{
     text-align: center;
-    font-size:50px;
+    /*font-size: calc([minimum size] + ([maximum size] - [minimum size]) * ((100vw - [minimum viewport width]) / ([maximum viewport width] - [minimum viewport width])));*/
+
+    font-size: calc(26px + (32 - 28) * ((100vw - 300px) / (1600 - 300))) !important;
     padding: 20px;
     font-family: 'Lemonada', cursive;
     color: var(--cor_Titulo);
@@ -35,26 +34,15 @@ h1{
 }
 
 p{
-    font-size: 20px;
+    font-size: calc(18px + (24 - 20) * ((100vw - 300px) / (1600 - 300))) !important;
     font-family: 'Kalam', cursive;
     color: var(--cor_Fundo);
 }
 
 #imgHome{
     width: calc(200px + (450 - 200) * ((100vw - 300px) / (1600 - 300)));
-    height: calc(200px + (450 - 200) * ((100vw - 300px) / (1600 - 300)));    animation-name: colorirImg;
-    animation-duration: 2s;
-    animation-iteration-count: infinite;
-}
-
-@keyframes colorirImg {
-    0% {
-        filter: drop-shadow(2px 2px 2px var(--cor_Texto));
-    }
-
-    100% {
-        filter: drop-shadow(2px 2px 2px var(--cor_Titulo));
-    }
+    height: calc(200px + (450 - 200) * ((100vw - 300px) / (1600 - 300)));
+    filter: drop-shadow(2px 2px 2px var(--cor_Fundo));
 }
 
 #textHome{
@@ -119,7 +107,7 @@ p{
 }
 
 #CV a, #CL a{
-    font-size: 20px;
+    font-size: calc(18px + (24 - 20) * ((100vw - 300px) / (1600 - 300))) !important;
     text-decoration: none;
 }
 
