--- a/components/styles/indexStyles.css
+++ b/components/styles/indexStyles.css
@@ -1,7 +1,7 @@
 @import url("cores.css");
 @import url("fonts.css");
 
-html, body{
+html, body {
     width: 100%;
     height: 100%;
     padding: 0;
@@ -10,8 +10,8 @@ html, body{
     background-size: cover; /* Isso faz a imagem cobrir todo o fundo */
     background-position: center center; /* Isso centraliza a imagem horizontal e verticalmente */
     background-repeat: no-repeat; /* Isso evita que a imagem se repita */
+    background-attachment: fixed; /* Isso mantém a imagem fixa enquanto a página é rolada */
 }
-
 
 @media (min-width: 768px) {
     
@@ -34,7 +34,7 @@ h1{
 }
 
 p{
-    font-size: calc(18px + (24 - 20) * ((100vw - 300px) / (1600 - 300))) !important;
+    font-size: calc(14px + (18 - 14) * ((100vw - 300px) / (1600 - 300))) !important;
     font-family: 'Kalam', cursive;
     color: var(--cor_Fundo);
 }
